# disk-usage

./: Cargo.toml  README.md
docs/: prd.md
src/: categories.rs  cli.rs  config.rs  main.rs  prompt.rs  scanner.rs  snapshot.rs  tree.rs  util.rs
src/tui/: ai_panel.rs  diff_view.rs  mod.rs  stale_view.rs  state.rs  status_bar.rs  tree_view.rs  types_view.rs
