[package]
name = "diskwise"
version = "0.1.0"
edition = "2021"

[dependencies]
ratatui = "0.29"
crossterm = "0.28"
walkdir = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
flate2 = "1"
clap = { version = "4", features = ["derive"] }
toml = "0.8"
dirs = "6"
chrono = "0.4"
glob-match = "0.2"
